--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -7,7 +7,7 @@
   <%= f.text_field :release_year %><br>
 
   <label>Song Released?:</label><br>
-  <%= f.text_field :released %><br>
+  <%= f.check_box :released %><br>
 
   <label>Song Genre:</label><br>
   <%= f.text_field :genre %><br>
