--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -12,7 +12,7 @@
   <label>Song Genre:</label><br>
   <%= f.text_field :genre %><br>
 
-  <label>Song Genre:</label><br>
+  <label>Artist Name:</label><br>
   <%= f.text_field :artist_name %><br>
 
   <%= f.submit %>
